search function now works

--- a/CNewsProject/Views/Home/Index.cshtml
+++ b/CNewsProject/Views/Home/Index.cshtml
@@ -1,51 +1,50 @@
-@model FrontPageArticlesVM  
+@model FrontPageArticlesVM
 
-<body>   
-    <main>
- 
- <section class="main-article">
-            <partial name="_ArticlePartial" model="@Model.MainArticle" />
-        </section>
-        <aside>
-            <div class="card">
-                <h2>Weather</h2>
-                @* <partial name="_WeatherPartial" model="@Model.WeatherStats" />    *@    
-                <vc:weather></vc:weather>
-                
-                <div class="weather-icon">☀️</div>
-                <p><a href="https://weather.com/sv-SE/weather/today/">Weather</a></p>
-                
-            </div>
-            <vc:exchange></vc:exchange>
-            <div class="card">
-                <h2>Exchange rates</h2>
-                <partial name="_CurrencyExchangeRatesPartial" model="@Model.CurrencyExchangeRates" /> 
+@* 
+<div class="row"> *@
 
-            </div>
+	<section class="main-article">
+		<partial name="_ArticlePartial" model="@Model.MainArticle" />
+	</section>
+@* 	<aside class="col-3">
+		<div class="card">
+			<h2>Weather</h2>
+			 <partial name="_WeatherPartial" model="@Model.WeatherStats" />   
+			<vc:weather></vc:weather>
 
-               @*  <ul>
-                    <li>USD : @Model.CurrencyExchangeRates.USD</li>
-                    <li>EUR : @Model.CurrencyExchangeRates.EUR</li>
-                    <li>JPY : @Model.CurrencyExchangeRates.JPY</li>
-                    <li>CNY : @Model.CurrencyExchangeRates.CNY</li>
-                    <li>GBP : @Model.CurrencyExchangeRates.GBP</li>
-                </ul> *@
+			<div class="weather-icon">☀️</div>
+			<p><a href="https://weather.com/sv-SE/weather/today/">Weather</a></p>
 
-                
+		</div>
+		<vc:exchange></vc:exchange>
+		<div class="card">
+		<h2>Exchange rates</h2>
+		<partial name="_CurrencyExchangeRatesPartial" model="@Model.CurrencyExchangeRates" />
 
-                <h2><a href="@Url.Action("Local", "News")">Local news</a></h2>
-                <h2><a href="@Url.Action("Sweden", "News")">Swedish news</a></h2>
-                <h2><a href="@Url.Action("Economy", "News")">Economy news</a></h2>                
-            </div>
-        </aside>
-        <section class="articles">
-            @foreach (var article in Model.Articles)
-            {
-                <partial name="_ArticlePartial" model="article" />
-            }
-        </section>    
-    </main>
-</body>
-</html>
-   
+		</div>
+
+		 <ul>
+		<li>USD : @Model.CurrencyExchangeRates.USD</li>
+		<li>EUR : @Model.CurrencyExchangeRates.EUR</li>
+		<li>JPY : @Model.CurrencyExchangeRates.JPY</li>
+		<li>CNY : @Model.CurrencyExchangeRates.CNY</li>
+		<li>GBP : @Model.CurrencyExchangeRates.GBP</li>
+		</ul>
+
+
+		<div>
+			<h2><a href="@Url.Action("Local", "News")">Local news</a></h2>
+			<h2><a href="@Url.Action("Sweden", "News")">Swedish news</a></h2>
+			<h2><a href="@Url.Action("Economy", "News")">Economy news</a></h2>
+		</div>
+	</aside> 
+	 <section class="articles">
+	@foreach (var article in Model.Articles)
+	{
+	<partial name="_ArticlePartial" model="article" />
+	}
+	</section>  
+</div> *@
+
+
 
