--- a/CNewsProject/Views/Shared/_LoginPartial.cshtml
+++ b/CNewsProject/Views/Shared/_LoginPartial.cshtml
@@ -7,11 +7,14 @@
     @if (signInManager.IsSignedIn(User))
     {
         <li class="nav-item">
-            <a asp-controller="Account" asp-action="Profile">@User.Identity?.Name</a>
+            <a class="text-light nav-link" asp-controller="Account" asp-action="Profile">
+                @User.Identity?.Name
+                👤
+            </a>
         </li>
         <li class="nav-item">
             <form asp-controller="Account" asp-action="Logout">
-                <button type="submit" class="nav-link btn btn-link text-dark">Logout</button>
+                <a type="submit" class="nav-link btn btn-link text-light">Logout</a>
             </form>
         </li>
     }
@@ -19,7 +22,7 @@
     {
        
         <li class="nav-item">
-            <a class="nav-link text-dark" asp-controller="Account" asp-action="Login">Login</a>
+            <a class="nav-link text-light" asp-controller="Account" asp-action="Login">Login</a>
         </li>
     }
 </ul>
