--- a/CNewsProject/Views/News/Economy.cshtml
+++ b/CNewsProject/Views/News/Economy.cshtml
@@ -1,5 +1,4 @@
-﻿@model List<Article>
-
+﻿
 @{
     ViewData["Title"] = "Economy News";
 }
@@ -21,8 +20,8 @@
                 
             </div>
         </div>
-        <vc:exchange></vc:exchange>
-        
+        <vc:exchange-all></vc:exchange-all>
+ 
     </aside>
 </main>
 
