--- a/CNewsProject/Views/News/World.cshtml
+++ b/CNewsProject/Views/News/World.cshtml
@@ -1,48 +1,15 @@
 ﻿@{
-    ViewData["Title"] = "World News";
+	Layout = "_LayoutNews";
+	ViewData["Title"] = "World News";
 }
 
-<main class="row">
-    <section class="main-article col-lg-8 col-md-8 col-sm-12">
-        @{
-            foreach (Article artikelJavel in Model)
-            {
-                <partial name="_ArticlePartial" model="artikelJavel" />
 
-            }
-        }
-    </section>
-    <aside class="col-lg-4 col-md-4 col-sm-12">
-        <div class="card mb-4">
-            <div class="card-body">
-                <vc:weather></vc:weather>
-            </div>
-        </div>
-        <vc:exchange></vc:exchange>
-    </aside>
-</main>
+<section class="main-article ">
+	@{
+		foreach (Article artikelJavel in Model)
+		{
+			<partial name="_ArticlePartial" model="artikelJavel" />
 
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-<script>
-    $(document).ready(function () {
-        var apiKey = 'YOUR_API_KEY'; // Replace with your OpenWeatherMap API key
-        var city = 'Atlanta'; // Replace with the desired city
-        var apiUrl = `https://api.openweathermap.org/data/2.5/weather?q=${city}&appid=${apiKey}&units=metric`;
-
-        $.ajax({
-            url: apiUrl,
-            method: 'GET',
-            success: function (data) {
-                var weatherIcon = data.weather[0].icon;
-                var weatherDescription = data.weather[0].description;
-                var temperature = data.main.temp;
-                var weatherDetails = `${weatherDescription}, ${temperature}°C`;
-
-                $('#weather-details').text(weatherDetails);
-            },
-            error: function () {
-                $('#weather-details').text('Unable to fetch weather details.');
-            }
-        });
-    });
-</script>
+		}
+	}
+</section>
