--- a/CNewsProject/Views/Shared/_LoginPartial.cshtml
+++ b/CNewsProject/Views/Shared/_LoginPartial.cshtml
@@ -19,7 +19,8 @@
     {
        
         <li class="nav-item">
-            <a class="nav-link text-dark" asp-controller="Account" asp-action="Login">Login</a>
+            <a class="nav-link btn btn-dark text-white" asp-controller="Account" asp-action="Login">Log in</a>
+            <a class="nav-link btn btn-dark text-white" asp-controller="Account" asp-action="Register">Register</a>
         </li>
     }
 </ul>
