--- a/CNewsProject/Views/Account/Register.cshtml
+++ b/CNewsProject/Views/Account/Register.cshtml
@@ -6,8 +6,8 @@
 @*Make CNEWS Snygg again*@
 @* <h1>Someone Please make this a little bit FINARE</h1> *@
 
-<h1 class="bg-info text-white">Create User</h1>
-<a asp-action="Index" class="btn btn-secondary">Back</a>
+<h1>Create User</h1>
+<a asp-action="Index" class="btn btn-dark">Back</a>
 <div asp-validation-summary="All" class="text-danger"></div>
 
 
@@ -25,5 +25,5 @@
         <label asp-for="Password"></label>
         <input asp-for="Password" class="form-control" />
     </div>
-    <button type="submit" class="btn btn-primary">Register</button>
+    <button type="submit" class="btn btn-dark">Register</button>
 </form>
