I moved from css to _Layout.

--- a/CNewsProject/Views/Shared/_Layout.cshtml
+++ b/CNewsProject/Views/Shared/_Layout.cshtml
@@ -16,6 +16,13 @@
             background-color: #a6a6a6;
             border-radius: 5px;
         }
+
+        .cookie-consent-banner {
+            z-index: 1000;
+            bottom: 0;
+            width: 100%;
+            text-align: center;
+        }    
     </style>
 </head>
 <body>
