Ops I did it again. I did something else. Wasn't part of the plan. I'm sorry, sorry.
Ops I did it again.
Got lost in Backend.
WIll happen again.
I'm sorry sorry.

--- a/CNewsProject/Views/Account/Profile.cshtml
+++ b/CNewsProject/Views/Account/Profile.cshtml
@@ -1,9 +1,20 @@
-﻿@model CNewsProject.Models.Account.User
+﻿@model AppUser
 
-<h1>Profile - @Model.UserName</h1>
+@{
+	//Vars
+	string profileName = Model.UserName + "'s Profile";
+}
+
+<h1>@profileName</h1>
 
 <button class="btn" id="edit-acc-btn">Edit Account</button>
 
+
+@*I'm thinking a View Component here so you don't have to refresh page on EDIT*@
+
+
+
+@* 
 <div id="edit-acc-form">
 	<form>
 		<label asp-for="UserName">User Name</label><br />
@@ -21,4 +32,4 @@
 		<label asp-for="Password">Confirm Password</label>
 		<input asp-for="Password" placeholder="Confirm Password" type="password"/>
 	</form>
-</div>
+</div> *@
