--- a/CNewsProject/Views/Account/Error.cshtml
+++ b/CNewsProject/Views/Account/Error.cshtml
@@ -7,3 +7,4 @@
     An error occurred while processing your request.
     Please try again later.
 </h2>
+<h1>Klarspråk: Någonting gick åt HELT JÄVLA HELVETE</h1>
