--- a/CNewsProject/Views/Account/Login.cshtml
+++ b/CNewsProject/Views/Account/Login.cshtml
@@ -20,4 +20,7 @@
         Remember me? <input type="checkbox" asp-for="RememberMe" />
     </div>
     <button class="btn btn-primary" type="submit">Log In</button>
+
+    <br />
+    <a asp-action="ForgotPassword">Reset Password</a>
 </form>
