--- a/CNewsProject/Views/News/Index.cshtml
+++ b/CNewsProject/Views/News/Index.cshtml
@@ -12,7 +12,7 @@
                 <vc:weather></vc:weather>
                 
                 <div class="weather-icon">☀️</div>
-                <p><a href="https://weather.com/sv-SE/weather/today/">Weather</a></p>
+                <p><a href="https://www.smhi.se/en/q/Linköping/2694762">Weather 1</a></p>
                 
             </div>
             <vc:exchange></vc:exchange>
@@ -23,11 +23,11 @@
             
         </aside>
         <section class="articles">
-            @foreach (var article in Model.NotMainButStillImportantArticles)
+    @*    @foreach (var article in Model.NotMainButStillImportantArticles)
             {
                 <h1>HALLÅ!</h1>
                 <partial name="_ArticlePartial" model="article" />
-            }
+            } *@
         </section>    
     </main>
 </body>
