--- a/CNewsProject/Views/Shared/Components/Weather/Default.cshtml
+++ b/CNewsProject/Views/Shared/Components/Weather/Default.cshtml
@@ -8,8 +8,8 @@
     //Parameter para = stats.timeSeries
 
     // TempStat temperature = 
-    DateTime testTime = Convert.ToDateTime("2024-08-07 17:00:00");
-    String hourMinute = DateTime.Now.ToString("HH:mm");
+    DateTime testTime = Convert.ToDateTime("2024-08-09 17:00:00");
+    //String hourMinute = DateTime.Now.ToString("HH:mm");
     Parameter temperature = Model.timeSeries.FirstOrDefault(ts => ts.validTime == testTime).parameters.FirstOrDefault(p => p.name == "t");
 }
 
