--- a/CNewsProject/Views/News/Local.cshtml
+++ b/CNewsProject/Views/News/Local.cshtml
@@ -1,17 +1,19 @@
-﻿
+﻿@model CategoryPageArticlesVM
+
 @{
 	Layout = "_LayoutNews";
-	ViewData["Title"] = "Local News";
 }
 
-<section class="main-article">
-	@{
-		foreach (Article artikelJavel in Model)
-		{
-			<partial name="_ArticlePartial" model="artikelJavel" />
 
-		}
+
+<section class="main-article">
+	<partial name="_ArticlePartial" model="@Model.MainArticle" />
+</section>
+<section class="articles row">
+	@foreach (var article in Model.NotMainButStillImportantArticles)
+	{
+		<div class="col-6">
+			<partial name="_ArticlePartial" model="article" />
+		</div>
 	}
 </section>
-
-
