--- a/CNewsProject/Views/News/Sweden.cshtml
+++ b/CNewsProject/Views/News/Sweden.cshtml
@@ -1,14 +1,19 @@
-﻿@{
-    Layout = "_LayoutNews";
-    ViewData["Title"] = "Swedish News";
+﻿@model CategoryPageArticlesVM
+
+@{
+	Layout = "_LayoutNews";
 }
 
-<section class="main-article">
-    @{
-        foreach (Article artikelJavel in Model)
-        {
-            <partial name="_ArticlePartial" model="artikelJavel" />
 
-        }
-    }
+
+<section class="main-article">
+	<partial name="_ArticlePartial" model="@Model.MainArticle" />
+</section>
+<section class="articles row">
+	@foreach (var article in Model.NotMainButStillImportantArticles)
+	{
+		<div class="col-6">
+			<partial name="_ArticlePartial" model="article" />
+		</div>
+	}
 </section>
