--- a/CNewsProject/Views/Shared/Components/Weather/Default.cshtml
+++ b/CNewsProject/Views/Shared/Components/Weather/Default.cshtml
@@ -7,8 +7,8 @@
 
     //Parameter para = stats.timeSeries
 
-    // TempStat temperature = 
-    DateTime testTime = Convert.ToDateTime("2024-08-07 17:00:00");
+    // // TempStat temperature = 
+    DateTime testTime = Convert.ToDateTime("2024-08-09 17:00:00"); // if you get an error here change this to a later date
     String hourMinute = DateTime.Now.ToString("HH:mm");
     Parameter temperature = Model.timeSeries.FirstOrDefault(ts => ts.validTime == testTime).parameters.FirstOrDefault(p => p.name == "t");
 }
