I'm a backend boy. Tryna make some toys.
In the backend.
I am cracking.

Now Robert is mad.
Says I'm working too fast.

Shit don't make sense.
wtf null reference!?

--- a/CNewsProject/Views/News/Article.cshtml
+++ b/CNewsProject/Views/News/Article.cshtml
@@ -1,3 +1,5 @@
 ﻿@model UserAndArticleIdCarrier
 
-<vc:article-locker principal="@Model.Principal" id="@Model.ArticleId"></vc:article-locker>
+<div id="VC1337">
+    <vc:article-locker principal="@Model.Principal" id="@Model.ArticleId"></vc:article-locker>
+</div>
