--- a/CNewsProject/Views/News/World.cshtml
+++ b/CNewsProject/Views/News/World.cshtml
@@ -1,5 +1,12 @@
 ﻿@{
-	Layout = "_LayoutNews";
+	if (_iService.GetAppUserByClaimsPrincipal(User).Result.Fire)
+	{
+		Layout = "_LayoutNewsFire";
+	}
+	else
+	{
+		Layout = "_LayoutNews";
+	}
 	ViewData["Title"] = "World News";
 }
 
