--- a/CNewsProject/Views/_ViewStart.cshtml
+++ b/CNewsProject/Views/_ViewStart.cshtml
@@ -1,3 +1,11 @@
 ﻿@{
-    Layout = "_Layout";
+
+    if(_iService.GetAppUserByClaimsPrincipal(User).Result.Fire)
+    {
+        Layout = "_LayoutFire";
+    }
+    else
+    {
+        Layout = "_Layout";
+    }
 }
