--- a/CNewsProject/Views/News/Index.cshtml
+++ b/CNewsProject/Views/News/Index.cshtml
@@ -1,9 +1,15 @@
 @model FrontPageArticlesVM
 
 @{
-	Layout = "_LayoutNews";
+	if (_iService.GetAppUserByClaimsPrincipal(User).Result.Fire)
+	{
+		Layout = "_LayoutNewsFire";
+	}
+	else
+	{
+		Layout = "_LayoutNews";
+	}
 }
-
 
 
 <section class="main-article">
@@ -12,7 +18,7 @@
 <section class="articles">
 	@foreach (var article in Model.NotMainButStillImportantArticles)
 	{
-		<h1>HALLÅ!</h1>
+		
 		<partial name="_ArticlePartial" model="article" />
 	}
 </section>
