I corrected some errors (too many copies of the same code).

--- a/CNewsProject/Views/_ViewStart.cshtml
+++ b/CNewsProject/Views/_ViewStart.cshtml
@@ -1,11 +1,4 @@
 ﻿@{
-
-    if(_iService.GetAppUserByClaimsPrincipal(User).Result.Fire)
-    {
-        Layout = "_LayoutFire";
-    }
-    else
-    {
-        Layout = "_Layout";
-    }
+    var appUser = await _iService.GetAppUserByClaimsPrincipal(User);
+    Layout = appUser?.Fire == true ? "_LayoutFire" : "_Layout";
 }
