fixed some errors. dent remove the layout picker from any of the pages please

--- a/CNewsProject/Views/News/Index.cshtml
+++ b/CNewsProject/Views/News/Index.cshtml
@@ -1,5 +1,18 @@
 @model FrontPageArticlesVM
 
+@{
+
+    if (_iService.GetAppUserByClaimsPrincipal(User).Result.Fire)
+    {
+        Layout = "_LayoutNewsFire";
+    }
+    else
+    {
+        Layout = "_LayoutNews";
+    }
+    ViewData["Title"] = "Sport News";
+
+}
 
 <section class="main-article">
 	<partial name="_ArticlePartial" model="@Model.MainArticle" />
