--- a/CNewsProject/Views/News/Index.cshtml
+++ b/CNewsProject/Views/News/Index.cshtml
@@ -2,14 +2,16 @@
 
 @{
 
-    if (_iService.GetAppUserByClaimsPrincipal(User).Result.Fire)
-    {
-        Layout = "_LayoutNewsFire";
-    }
-    else
+    // vv DONT REMOVE THIS PLEASE YOU WILL CAUSE MORE ERRORS THAN YOU FIX vv
+    // if (_iService.GetAppUserByClaimsPrincipal(User).Result.Fire)
+    // {
+    //     Layout = "_LayoutNewsFire";
+    // }                                                // LET FILIP FIX THIS LATER
+    // else                                             // << DONT REMOVE THIS PLEASE YOU WILL CAUSE MORE ERRORS THAN YOU FIX
     {
         Layout = "_LayoutNews";
     }
+    // ^^ DONT REMOVE THIS PLEASE YOU WILL CAUSE MORE ERRORS THAN YOU FIX ^^
     ViewData["Title"] = "Sport News";
 
 }
