--- a/CNewsProject/Views/News/Sweden.cshtml
+++ b/CNewsProject/Views/News/Sweden.cshtml
@@ -1,13 +1,15 @@
 
 @{
-    if (_iService.GetAppUserByClaimsPrincipal(User).Result.Fire)
-    {
-        Layout = "_LayoutNewsFire";
-    }
-    else
+    // vv DONT REMOVE THIS PLEASE YOU WILL CAUSE MORE ERRORS THAN YOU FIX vv
+    // if (_iService.GetAppUserByClaimsPrincipal(User).Result.Fire)
+    // {
+    //     Layout = "_LayoutNewsFire";
+    // }                                                // LET FILIP FIX THIS LATER
+    // else                                             // << DONT REMOVE THIS PLEASE YOU WILL CAUSE MORE ERRORS THAN YOU FIX
     {
         Layout = "_LayoutNews";
     }
+    // ^^ DONT REMOVE THIS PLEASE YOU WILL CAUSE MORE ERRORS THAN YOU FIX ^^
     ViewData["Title"] = "Swedish News";
 }
 
