--- a/CNewsProject/Views/_ViewStart.cshtml
+++ b/CNewsProject/Views/_ViewStart.cshtml
@@ -1,10 +1,12 @@
 ﻿@{
-    if (_iService.GetAppUserByClaimsPrincipal(User).Result.Fire)
-    {
-        Layout = "_LayoutFire";
-    }
-    else
+    // vv DONT REMOVE THIS PLEASE YOU WILL CAUSE MORE ERRORS THAN YOU FIX vv
+    // if (_iService.GetAppUserByClaimsPrincipal(User).Result.Fire)
+    // {
+    //     Layout = "_LayoutFire";
+    // }                                                // LET FILIP FIX THIS LATER
+    // else                                             // << DONT REMOVE THIS PLEASE YOU WILL CAUSE MORE ERRORS THAN YOU FIX
     {
         Layout = "_Layout";
     }
+    // ^^ DONT REMOVE THIS PLEASE YOU WILL CAUSE MORE ERRORS THAN YOU FIX ^^
 }
