--- a/CNewsProject/Views/Shared/Components/Exchange/Default.cshtml
+++ b/CNewsProject/Views/Shared/Components/Exchange/Default.cshtml
@@ -11,14 +11,23 @@
        
 
     }
+ 
     <p>100 SEK equels</p>
+    <input id="amountInSek" class="form-control mb-3" type="number" value="100" onchange="updateExchangeRates()" />
+    <script type="text/javascript">
+        let jusd = @usd;
+        let jeur = @eur;
+        let jjpy = @jpy;
+        let jcny = @cny;
+        let jgbp = @gbp;
+    </script>
     <ul>
-        <li>USD : @usd $</li>
-        <li>EUR : @eur €</li>
-        <li>JPY : @jpy Yen</li>
-        <li>CNY : @cny Yuán</li>
-        <li>GBP : @gbp £</li>
-       
+        <li id="liusd">USD : @usd $</li>
+        <li id="lieur">EUR : @eur €</li>
+        <li id="lijpy">JPY : @jpy Yen</li>
+        <li id="licny">CNY : @cny Yuán</li>
+        <li id="ligbp">GBP : @gbp £</li>
+
     </ul>
 
     
