--- a/CNewsProject/Views/Subscription/Index.cshtml
+++ b/CNewsProject/Views/Subscription/Index.cshtml
@@ -1,8 +1,8 @@
-﻿@model SubscriptionViewModel
-
+﻿
 <h2>Select a Subscription Plan</h2>
 
-<form asp-action="Subscribe" method="post">
+@* <form asp-action="Subscribe" method="post">
     <select asp-for="SelectedSubscriptionId" asp-items="@(new SelectList(Model.AvailableSubscriptions, "Id", "SubscriptionType"))"></select>
     <button type="submit">Subscribe</button>
 </form>
+ *@
