--- a/CNewsProject/Views/Shared/_ArticlePartial.cshtml
+++ b/CNewsProject/Views/Shared/_ArticlePartial.cshtml
@@ -3,10 +3,11 @@
 @{
     int number = 5;
     string codeForCard = "<div class=\"card mb-4 w-100\"> \"img class=\"card-img-top\" src=\"@Model.ImageLink\" alt=\"@Model.Headline\"><div class=\"card-body\"><h5 class=\"card-title\">@Model.Headline</h5><p class=\"card-text\">@Model.ContentSummary</p></div><div class=\"card-footer text-muted\"><span>Date: @Model.PublishedDate.ToShortDateString()</span><span>Views: @Model.Views</span><span>Likes: @Model.Likes</span><span>Category: @Model.Category.Name</span></div></div>";
+    // onclick="LoadArticle(@Model.Id)"
 }
 
-<div class="card mb-4 w-100" onclick="LoadArticle(@Model.Id)">
-    <img class="card-img-top" src="@Model.ImageLink" alt="@Model.Headline">
+<a class="card mb-4 w-100" asp-controller="News" asp-action="Article" asp-route-id="@Model.Id">
+    <img class="card-img-top" src="@Model.ImageLink" alt="@Model.Headline" >
     <div class="card-body">
         <h5 class="card-title">@Model.Headline</h5>
         <p class="card-text">@Model.ContentSummary</p>
@@ -17,10 +18,12 @@
         <span>Likes: @Model.Likes</span>
         <span>Category: @Model.Category.Name</span>
     </div>
-</div>
+</a>
+
 <script type="text/javascript">
 
     function LoadArticle(id) {
-        window.location.href = '@Url.Content("~/News/Article/")' + id
+        let cUrl = '@Url.Content("/News/Article/")';
+        window.location.href = cUrl + id;
     }
 </script>
