--- a/CNewsProject/Views/Shared/_LayoutFire.cshtml
+++ b/CNewsProject/Views/Shared/_LayoutFire.cshtml
@@ -25,9 +25,9 @@
         }    
     </style>
 </head>
-<body id="Hotbar4200" style="background-image: url('content\images\highqualitynavbar.png')">
+<body>
     <header>
-        <nav id="Hotbar420" class="navbar fixed-top navbar-expand-lg navbar-dark" style="background-color: #595959">
+        <nav class="navbar fixed-top navbar-expand-lg navbar-dark" style="background-color: #595959">
             <div class="container-fluid">
                 <a class="navbar-brand" asp-area="" asp-controller="News" asp-action="Index">
                     <img src="/content/images/cnewslogofire.png" alt="News Logo" style="height: 50px;">
