--- a/CNewsProject/Views/Account/Profile.cshtml
+++ b/CNewsProject/Views/Account/Profile.cshtml
@@ -13,6 +13,12 @@
 <form asp-action="Profile" method="post">
 	<input asp-for="Id" type="hidden" />
 
+	<label asp-for="UserName"></label>
+	<input disabled asp-for="UserName" />
+
+	<label asp-for="Email"></label>
+	<input disabled asp-for="Email" />
+
 	<div class="form-group">
 		Fire Mode? <input type="checkbox" asp-for="Fire" />
 	</div>
