Added headlines to the sidebar, and fixed some things

--- a/CNewsProject/Views/Shared/Components/Weather/Default.cshtml
+++ b/CNewsProject/Views/Shared/Components/Weather/Default.cshtml
@@ -18,7 +18,7 @@
         <div class="card">
             <h3>Weather</h3> 
             <form>
-            <div class="row mg-3">
+            <div class="">
                 <label>City</label>
                 <input id="city" type="text" default="@city" />
             </div>
