--- a/CNewsProject/Views/Shared/_LayoutNews.cshtml
+++ b/CNewsProject/Views/Shared/_LayoutNews.cshtml
@@ -98,10 +98,9 @@
 		</main>
 		<aside class="col-3" style="margin-top:90px">
 
-			<vc:weather></vc:weather>
-
-
-			<vc:exchange></vc:exchange>
+			<vc:weather></vc:weather><br />
+			<vc:exchange></vc:exchange><br />
+			<vc:sidebar-headlines></vc:sidebar-headlines>
 		</aside>
 	</div>
 	@*    <footer class="border-top fixed-bottom footer  py-3 bg-light text-muted" aria-label="Footer">
