--- a/CNewsProject/Views/News/Economy.cshtml
+++ b/CNewsProject/Views/News/Economy.cshtml
@@ -16,7 +16,9 @@
 		</section>
 	</div>
 	<aside class="col-3">
-		<vc:weather></vc:weather>
+		<div id="VCWeather">
+			<vc:weather name-of-city=""></vc:weather>
+		</div>
 		<vc:exchange-all></vc:exchange-all>
 	</aside>
 </div>
